Mobile View Paddings

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Telecrm Business Integrations Platform</title>
-  <meta name="description" content=Easily integrate Telecrm with the tools you already use to save time and improve team performance />
+  <meta name="description" content="Easily integrate Telecrm with the tools you already use to save time and improve team performance" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
@@ -17,12 +17,12 @@
             <div class="hero-left">
                 <h1 class="hero-heading">Connect tools, simplify your sales!</h1>
                 <p class="hero-subheading">
-                    “Easily integrate Telecrm with the tools you already use to save time and improve team performance”.
+                    Easily integrate Telecrm with the tools you already use to save time and improve team performance.
                 </p>
                 <button class="btnn-primary">Request a Demo</button>
             </div>
             <div class="hero-right">
-                <img src="Assets\image.png" alt="Tool integrations diagram" />
+                <img src="Assets\HeroImage.png" alt="Tool integrations diagram" />
             </div>
         </div>
     </section>
@@ -31,7 +31,6 @@
         <div class="section-centered-title">
             <h2>How Telecrm integrations streamline your business</h2>
         </div>
-
         <div class="showcase-item">
             <div class="showcase-container">
                 <div class="showcase-text">
@@ -47,7 +46,7 @@
             </div>
         </div>
 
-    <div class="showcase-item" style="background-color: rgb(250, 240, 255); padding: 3rem;">
+    <div class="showcase-item" style="background-color: rgb(253, 247, 255); padding: 3rem; max-width: 100%;">
       <div class="showcase-container">
         <div class="showcase-visual">
           <img src="Assets\int2.png" alt="Integration diagram 2" />
@@ -71,7 +70,7 @@
             Leads are captured and auto-assigned with follow-up tasks—built‑in automation to boost efficiency.
           </p>
           <button class="btn-primary">Request a Demo</button>
-        </div>
+        </div>  
         <div class="showcase-visual">
           <img src="Assets\int3.png" alt="Integration diagram 3" />
         </div>
@@ -79,19 +78,21 @@
     </div>
   </section>
 
-  <section class="integration-grid" id="features">
+  <section class="integration-grid" id="features" style="background-color: rgb(253, 247, 255); padding: 3rem; max-width: 100%;">
   <div class="grid-container">
     <div class="grid-header">
       <h2 class="grid-title">Explore our full range of integrations</h2>
       <p class="grid-description">
-        Automate leads, sync data, and keep your team aligned—connect your tools in a few clicks!
+        Integrations makes it easy to automate tasks, sync data and keep your team aligned.With Telecrm, you can connect your existing tools in just a few clicks. Our extensive list 
       </p>
     </div>
     
     <div class="grid">
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Facebook.png" alt="Facebook logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Facebook.png" alt="Facebook logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -101,8 +102,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Sheets.png" alt="Google Sheets logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Sheets.png" alt="Google Sheets logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -112,11 +115,12 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Razorpay.png" alt="Razorpay logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Razorpay.png" alt="Razorpay logo" />
+          </div>
         </div>
         <div class="divider"></div>
-
         <div class="integration-info">
           <h3>Razorpay</h3>
           <p>Get real-time payment status updates inside lead profiles</p>
@@ -124,11 +128,12 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/CallerDesk.png" alt="CallerDesk logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/CallerDesk.png" alt="CallerDesk logo" />
+          </div>
         </div>
         <div class="divider"></div>
-
         <div class="integration-info">
           <h3>CallerDesk</h3>
           <p>Log call activity, duration and recordings instantly</p>
@@ -137,11 +142,12 @@
 
       <!-- 2nd Row -->
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Maqsam.png" alt="Maqsam logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Maqsam.png" alt="Maqsam logo" />
+          </div>
         </div>
         <div class="divider"></div>
-
         <div class="integration-info">
           <h3>Maqsam</h3>
           <p>Record calls and add conversation logs to lead timelines</p>
@@ -149,11 +155,12 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Knowlarity.png" alt="Knowlarity logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Knowlarity.png" alt="Knowlarity logo" />
+          </div>
         </div>
         <div class="divider"></div>
-
         <div class="integration-info">
           <h3>Knowlarity</h3>
           <p>Track outbound/inbound calls with agent-wise logs</p>
@@ -161,11 +168,12 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Mcube.png" alt="Mcube logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Mcube.png" alt="Mcube logo" />
+          </div>
         </div>
         <div class="divider"></div>
-
         <div class="integration-info">
           <h3>Mcube</h3>
           <p>Auto-log calls, missed follow-ups, and call outcomes</p>
@@ -173,11 +181,12 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp logo" />
+          </div>
         </div>
         <div class="divider"></div>
-
         <div class="integration-info">
           <h3>WhatsApp</h3>
           <p>Send and receive WhatsApp messages directly into the software</p>
@@ -186,8 +195,10 @@
 
       <!-- 3rd Row -->
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp Cloud API logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp Cloud API logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -197,11 +208,12 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp Chat Widget logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp Chat Widget logo" />
+          </div>
         </div>
         <div class="divider"></div>
-
         <div class="integration-info">
           <h3>WhatsApp Chat Widget</h3>
           <p>Directly bring website leads into your WhatsApp Chat</p>
@@ -209,8 +221,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/MagicBricks.png" alt="MagicBricks logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/MagicBricks.png" alt="MagicBricks logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -220,8 +234,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/99Acres.png" alt="99acres logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/99Acres.png" alt="99acres logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -232,8 +248,10 @@
 
       <!-- 4th Row -->
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Housing.png" alt="Housing.com logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Housing.png" alt="Housing.com logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -243,8 +261,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/JustDial.png" alt="Just Dial logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/JustDial.png" alt="Just Dial logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -254,8 +274,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/IndiaMart.png" alt="IndiaMart logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/IndiaMart.png" alt="IndiaMart logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -265,8 +287,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/sulekha.png" alt="Sulekha logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/sulekha.png" alt="Sulekha logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -277,8 +301,10 @@
 
       <!-- 5th Row -->
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/shiksha.png" alt="Siksha logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/shiksha.png" alt="Siksha logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -288,8 +314,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/TradeIndia.png" alt="Trade India logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/TradeIndia.png" alt="Trade India logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -299,8 +327,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Meet.png" alt="Google Meet logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Meet.png" alt="Google Meet logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -310,8 +340,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Wordpress.png" alt="WordPress logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Wordpress.png" alt="WordPress logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -322,8 +354,10 @@
 
       <!-- 6th Row -->
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/WebAPI.png" alt="Website/API logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/WebAPI.png" alt="Website/API logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -333,8 +367,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Shopify.png" alt="Shopify logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Shopify.png" alt="Shopify logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -344,8 +380,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Woo.png" alt="WooCommerce logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Woo.png" alt="WooCommerce logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -355,8 +393,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Embedded Apps.png" alt="Embedded Apps logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Embedded Apps.png" alt="Embedded Apps logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="divider"></div>
