--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button class="btnn-primary">Request a Demo</button>
             </div>
             <div class="hero-right">
-                <img src="Assets\image.png" alt="Tool integrations diagram" />
+                <img src="Assets\HeroImage.png" alt="Tool integrations diagram" />
             </div>
         </div>
     </section>
@@ -31,7 +31,6 @@
         <div class="section-centered-title">
             <h2>How Telecrm integrations streamline your business</h2>
         </div>
-
         <div class="showcase-item">
             <div class="showcase-container">
                 <div class="showcase-text">
@@ -71,7 +70,7 @@
             Leads are captured and auto-assigned with follow-up tasks—built‑in automation to boost efficiency.
           </p>
           <button class="btn-primary">Request a Demo</button>
-        </div>
+        </div>  
         <div class="showcase-visual">
           <img src="Assets\int3.png" alt="Integration diagram 3" />
         </div>
