Rectified position of 'Request' button from outside grid.

--- a/index.html
+++ b/index.html
@@ -405,26 +405,40 @@
           <p>Auto-import order details and manage post-sale engagement</p>
         </div>
       </div>
-    </div>
+  </section>
+  </div>
       <div class="grid-footer">
         <button class="btn-primary">Request a Demo</button>
       </div>
     </div>
+
+  <section class="additional-info" id="additional-info">
+    <div class="info-container">
+      <h2 class="info-title">Connect to almost anything with an API</h2>
+      <p class="info-description"> 
+        If you can't find the integration you need, let us know - we'll do our best to help you!
+      </p>
+      <button class="btnn-primary">Request a Demo</button>
+    </div>
   </section>
 
-<section class="testimonials-mobile" id="testimonials">
-  <div class="testimonial-video-wrapper">
-    <h2 class="testimonial-title">Hear From Our Happy Users</h2>
-    <div class="video-container">
-      <iframe 
-        src="https://www.youtube.com/embed/CCDRBTYSo6c?rel=0&showinfo=0&autoplay=0&mute=0" 
-        frameborder="0" 
-        allowfullscreen 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-      </iframe>
+
+  <section class="testimonials-mobile" id="testimonials">
+    <div class="testimonial-video-wrapper">
+      <h2 class="testimonial-title">What Our Customers Say</h2>
+      <p class="testimonial-description">
+        Trusted by over 25,000 users and counting
+      </p>
+      <div class="video-container">
+        <iframe 
+          src="https://www.youtube.com/embed/CCDRBTYSo6c?rel=0&showinfo=0&autoplay=0&mute=0" 
+          frameborder="0" 
+          allowfullscreen 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
+        </iframe>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <script src="script.js"></script>
 </body>
