Padding for 4k Screen

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
         <div class="showcase-text">
           <h2 class="showcase-title">Access all your info from a single platform</h2>
           <p class="showcase-description">
-            Telecrm brings all your systems into one data layer and auto-syncs your customer data—
-            accessible from one interface.
+            Telecrm brings all your systems into one data layer and auto-syncs your customer data accessible from one interface.
           </p>
           <button class="btn-primary">Request a Demo</button>
         </div>
