Added Videos in Testimonials section with updating its view into a carousel.

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
   </section>
 
 
-  <section class="testimonials-mobile" id="testimonials">
+  <!-- <section class="testimonials-mobile" id="testimonials">
     <div class="testimonial-video-wrapper">
       <h2 class="testimonial-title">What Our Customers Say</h2>
       <p class="testimonial-description">
@@ -437,7 +437,67 @@
         </iframe>
       </div>
     </div>
-  </section>
+  </section> -->
+
+  <section class="testimonials-mobile" id="testimonials">
+  <div class="testimonial-video-wrapper">
+    <h2 class="testimonial-title">What Our Customers Say</h2>
+    <p class="testimonial-description">
+      Trusted by over 25,000 users and counting
+    </p>
+
+    <!-- Carousel wrapper -->
+    <div class="video-carousel">
+      <!-- radios to control slides -->
+      <input type="radio" name="carousel" id="slide1" checked>
+      <input type="radio" name="carousel" id="slide2">
+      <input type="radio" name="carousel" id="slide3">
+
+      <div class="slides">
+        <div class="slide">
+          <div class="video-container">
+            <iframe 
+              src="https://www.youtube.com/embed/P6aQlaN35NA?rel=0&showinfo=0&autoplay=0&mute=0" 
+              frameborder="0" 
+              allowfullscreen 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
+            </iframe>
+          </div>
+        </div>
+        <div class="slide">
+          <div class="video-container">
+            <iframe 
+              src="https://www.youtube.com/embed/piVVB4KHer8?rel=0&showinfo=0&autoplay=0&mute=0" 
+              frameborder="0" 
+              allowfullscreen 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
+            </iframe>
+          </div>
+        </div>
+        <div class="slide">
+          <div class="video-container">
+            <iframe 
+              src="https://www.youtube.com/embed/CCDRBTYSo6c?rel=0&showinfo=0&autoplay=0&mute=0" 
+              frameborder="0" 
+              allowfullscreen 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
+            </iframe>
+          </div>
+        </div>
+      </div>
+
+      <!-- dot controls -->
+      <div class="dots">
+        <label for="slide1"></label>
+        <label for="slide2"></label>
+        <label for="slide3"></label>
+      </div>
+    </div>
+    <!-- end carousel -->
+
+  </div>
+</section>
+
 
   <script src="script.js"></script>
 </body>
